# function-interceptor

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/module/: CMakeLists.txt
demo/module/include/: module.h
demo/module/src/: module.cpp
demo/program/: CMakeLists.txt  main.cpp
hook/: CMakeLists.txt  library.cpp
scripts/: loader.py  script.js
